--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </div>
 
     <div class="footer">
-      Incentive offered by Cash Back Realty, Brokerage. Terms and conditions apply. Not intended to solicit buyers or sellers currently under contract. Learn more at <a href="http://CBRB.info" style="color:#FFD700;">CBRB.info</a>
+      Incentive offered by Cash Back Realty, Brokerage. Terms and conditions apply. Not intended to solicit buyers or sellers currently under contract. Learn more at CBRB.info.
     </div>
   </div>
 </body>
