--- a/index.html
+++ b/index.html
@@ -175,6 +175,13 @@
           <textarea placeholder="Tell us about your home search" rows="4"></textarea>
           <button type="submit">SUBMIT & GET YOUR CASH BACK</button>
         </form>
+<button type="submit">GET MY CASH BACK ➜</button>
+
+<p style="margin-top: 10px; font-size: 0.9em; color: #ccc;">
+  📍 Cash Back Realty Inc., Brokerage<br>
+  123 Example Street, Suite 200<br>
+  Toronto, ON M1M 1M1
+</p>
       </div>
     </div>
 
