--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
     </div>
 
     <p style="margin-top: 10px; font-size: 0.9em; color: #ccc;">
-  📍 Cash Back Realty Inc., Brokerage<br>
-  123 Example Street, Suite 200<br>
-  Toronto, ON M1M 1M1
+  📍 Cash Back Realty, Brokerage<br>
+  30 Eglinton Ave W, Unit 400<br>
+  Mississauga, ON L5R 3E7
 </p>
 
     <div class="cta">
