--- a/index.html
+++ b/index.html
@@ -171,13 +171,14 @@
 
       <div class="right contact">
         <h3>Call Now or Message Us</h3>
-        <form>
-          <input type="text" placeholder="Your Name" required />
-          <input type="tel" placeholder="Phone Number" required />
-          <input type="email" placeholder="Email" required />
-          <textarea placeholder="Tell us about your home search" rows="4"></textarea>
-          <button type="submit">SUBMIT & GET YOUR CASH BACK</button>
-        </form>
+<form action="https://formspree.io/f/mjkreogy" method="POST">
+  <input type="text" name="name" placeholder="Your Name" required />
+  <input type="tel" name="phone" placeholder="Phone Number" required />
+  <input type="email" name="email" placeholder="Email" required />
+  <textarea name="message" placeholder="Tell us about your home search" rows="4"></textarea>
+  <button type="submit">SUBMIT & GET YOUR CASH BACK</button>
+</form>
+
 
       </div>
     </div>
