--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 </a>
 <head>
   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-981442590">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-981442590');
+</script>
+  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-4BH2875C04"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
